# MAPF_pii_Project

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  MANIFEST.in  README.md  build.py  prova.yaml  pyproject.toml  requirements.txt
Code/: Graph.h  Node.h  main.cpp
design/: DataStructure.md  UML_Draft.md  UML_Draft.uml
doc/: generalProjectInfo.md
doc/design/: DataStructure.md  ER_Diagram_Finished.excalidraw
docs/: conf.py  dependencies.md  index.md  requirements.txt  roadmap.md
docs/architecture/: description.puml  instrument.puml  metrics.puml  metrics_dictionary.md  test_instance.puml  yaml_imporing.py
docs/design/: designChoices.md
docs/examples/: graph_benchmark.yaml  multi_iteration_benchmark.yaml  simple_benchmark.yaml
docs/material/: mapf_algorithms.md
docs/source/: mapfbench.cli.rst  mapfbench.connection.rst  mapfbench.description.maps.rst  mapfbench.description.rst  mapfbench.exporter.rst  mapfbench.formatter.rst  mapfbench.inspector.rst  mapfbench.instrument.rst  mapfbench.metrics.rst  mapfbench.result.rst  mapfbench.rst  mapfbench.runner.rst  modules.rst
docs/tutorial/: INSTALL.md  QUICKSTART.md  actions.md  benchmark_format.md  installation.md  introduction.md  metrics.md  parallel.md  profiling.md  results_format.md  test_format.md
mapfbench/: __init__.py  benchmarkinspector_test.py  benchmarkrunner_test.py  customexceptions.py  globals.py  main.py
mapfbench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mapfbench/benchformatter/: extractor.py  formatter.py  maprepresentation.py
mapfbench/cli/: cli_commands.py  cli_interface.py
mapfbench/connection/: c_socket.py  connectionconfig.py  message.py  socket_tester_client.py  socket_tester_server.py
mapfbench/description/: benchmarkdescription.py  entity_description.py  graph.py
mapfbench/formatter/: extractor.py  formatter.py  maprepresentation.py  prova.yaml
mapfbench/inspector/: benchmarkinspector.py  testinspector.py
mapfbench/metrics/: agentMetrics.py  (+2 more)
material/: PII_design.txt  UML base.excalidraw
sketch/: array_creation.py  cell.py  class getter.py  dict_keys.py  enum_str.py  list_tuple_eq.py  mapscheme_try.py  max_empty_array.py  multiprefix.py  range.py  result.py  zipping.py
source/: Answer.cpp  Answer.h  Graph.cpp  main.cpp
src/: benchmarkinspector_test.py  benchmarkrunner_test.py  commanddispatcher.py  entity.py  globals.py  main.py
test/: CMakeLists.txt  answer.cpp  conftest.py  default.py  globals.py  prova.yaml  template.py  test_Benchmark.py  test_DirectedGraph.py  test_Entity.py  test_Test.py  test_graph.py
test/benchmark/: test_BenchmarkDescription.py  test_TestDescription.py
test/description/: conftest.py  test_BenchmarkDescription.py  test_TestDescription.py  test_encoding.py  test_mapscheme.py  test_plan.py  test_scenario.py
test/description/entity/: test_AgentDescription.py  test_EntityDescription.py
test/description/graph/: test_Edge.py  test_Graph.py  test_Node.py  test_gridGraph.py  test_undirectedGraph.py
test/entity/: test_AgentDescription.py  test_EntityDescription.py
test/formatconverter/: test_JSONEncoders.py
test/graph/: test_Edge.py  test_Graph.py  test_Node.py
test/importer/: conftest.py  test_humanreadable.py  test_importer.py
test/importer/map_files/: simple.map
test/inspector/: test_action.py  test_testinspector.py  test_testrun.py
test/instrument/: benchmarkclient_try.py  benchmarkserver_try.py  test_benchmarkserver.py  test_planrecorder.py
test/metrics/: conflict.py  test_conflict.py  test_metrics.py  test_result.py
test/runner/: test_testmanager.py  test_testrecord.py
test/utils/: test_utils.py
(+254 files in other folders)
